--- a/template/index.html
+++ b/template/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<input id="word"type="text"/><button id="submit"type="submit">Submit</button>
 		
 
 		<script type="text/javascript" src="js/main.js"></script>
